--- a/scss/nav-bar/navbar.scss
+++ b/scss/nav-bar/navbar.scss
@@ -1,29 +1,32 @@
 
 
 nav{
-	width: 1000px;
-	height: 100px;
-	position: absolute;
-	align-items: center;
+	width: 500px;
+	margin: 0 auto;
 	display: flex;
-	overflow: hidden;
+	justify-content: space-between;
+	padding: 1rem;
+	 
 
 	.nav-brand{
-		padding: 0 30px;
-		font-size: 3.5rem;
-		@extend %component;
+		display: flex;
+		justify-content: space-around;
+		align-items: center; 
+		font-size: 2.0rem; 
+		margin: 0;
+		@extend %component;  
 	}
-
+ 
 	ul {
 		list-style: none;
-		position: relative;
-    	left: 20%;
+		display: flex;
+		align-items: center; 
 
-		li{
+		li{ 
 			display: inline-block;
 
 			.nav-list{
-				font-size: 1.8rem;
+				font-size: 1.0rem;
 				padding: 20px;
 				text-transform: uppercase;
 				@extend %component;
